# mr-injector

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  secrets.toml.template
mr_injector/backend/: agent.py  db.py  llm.py  mcp_server.py  openai.py  rag.py  tools.py  utils.py
mr_injector/backend/models/: base.py  db.py  documents.py  llms.py
mr_injector/frontend/: css.py  db.py  main.py  security.py  session.py  views.py
mr_injector/frontend/modules/: main.py  module_1_prompt_leaking.py  module_2_prompt_injection.py  module_3_jailbreaking.py  module_3_unbounded_consumption.py  module_4_agents.py  module_4_unbounded_consumption.py  module_5_rag.py  module_6_rag_poisoning.py  module_agents.py  module_jailbreaking.py  module_prompt_injection.py  module_prompt_leaking.py  module_rag.py  module_rag_poisoning.py
mr_injector/frontend/styling/: exercise.css  module.css
workshop/: .env.template  .gitignore  README.md  langgraph_exercise.ipynb  langgraph_exercise_loesung.ipynb  langgraph_exercise_uebung.ipynb  pyproject.toml
workshop/sample_data/: sample_unternehmen_data.csv
workshop/solution/: langgraph_exercise_loesung.ipynb
