[project]
name = "mr-injector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"  # Updated to match your Docker image
packages = [{include = "mr_injector"}]
dependencies = [
    "chromadb>=0.6.3",
    "deepeval==2.5.5",
    "haystack-ai>=2.9.0",
    "langchain==0.3.27",
    "langchain-chroma==0.2.3",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.9",
    "langchainhub==0.1.21",
    "langgraph==0.6.4",
    "langsmith==0.4.13",
    "llm-guard>=0.3.15",
    "openai>=1.58.1",
    "pandas==2.3.1",
    "pdfplumber>=0.11.5",
    "posthog==3.0.0",
    "pydantic==2.11.7",
    "pypdf==5.9.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "rich[jupyter]==14.1.0",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.41.1",
    #"torch>=1.11.0",  # Keep this line to specify the torch version
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
