[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "chromadb==0.4.24",
    "deepeval[metrics]>=2.5.5",
    "langchain>=0.3.27",
    "langchain-chroma==0.1.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "llm-guard>=0.3.16",
    "onnxruntime==1.14.1",
    "pandas>=2.3.1",
    "posthog==3.0.0",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "rich[jupyter]>=14.1.0",
]